<resources>
    <string name="app_name">Data Management</string>
    <string name="button_login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="DataManagement">DATA MANAGEMENT</string>
    <string name="textRegister">Not registered yet?</string>
    <string name="textview_signup"><u>Signup</u></string>
    <string name="edittext_name">Name</string>
    <string name="button_register">Register</string>
    <string name="button_signup">Signup</string>
    <!--<string name="button_viewAllData">View Data</string>-->
    <string name="edittext_email">Email</string>
    <string name="edittext_password">Password</string>
    <string name="edittext_cPassword">Confirm Password</string>
    <string name="userScreen">You have entered user page</string>
    <string name="viewListData">view data</string>
    <string name="addListData">add new task</string>
    <string name="addtolistview">Add</string>
    <string name="cancelAdd">Cancel</string>
    <string name="Add">add</string>
    <string name="Cancel">cancel</string>

    <string name="logout_menu">logout</string>
    <string name="backtologin">Already a member?</string>
    <string name="textviewsignin"><u>Signin</u></string>


</resources>
