<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:background="@drawable/loginscreen"
    tools:context=".LoginActivity">





    <EditText
        android:drawableStart="@drawable/ic_account_box_24dp"
        android:drawableLeft="@drawable/ic_account_box_24dp"
        android:id="@+id/edittext_loginusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_login"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="100dp"
        android:hint="@string/username"
        android:textColorHint="@color/textHintColor"
        android:background="@color/editTextColor"
        android:padding="10dp"
        />
    <EditText
        android:drawableStart="@drawable/ic_https_24dp"
        android:drawableLeft="@drawable/ic_https_24dp"
        android:id="@+id/edittext_loginpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_loginusername"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/textHintColor"
        android:background="@color/editTextColor"/>

    <TextView
        android:id="@+id/textview_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textRegister"
        android:textSize="20dp"
        android:layout_below="@+id/edittext_password"
        android:padding="20dp"
        android:layout_centerInParent="true"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_register"
        android:id="@+id/textview_signup"
        android:layout_centerInParent="true"
        android:text="@string/textview_signup"
        android:textSize="30dp"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="registerPage"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/button_login"
        android:textSize="20dp"
        android:onClick="UserData"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_below="@+id/textview_signup"
        android:background="@color/buttonColor"
        />
</RelativeLayout>
