<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.SignupActivity"
    android:background="@color/backgroundColor">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrappername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <EditText
            android:id="@+id/edittext_name"
            android:hint="@string/edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:inputType="text"
            android:maxLines="1"
        />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapperemail"
        android:layout_below="@+id/wrappername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <EditText
            android:id="@+id/edittext_email"
            android:hint="@string/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_name"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:inputType="textWebEmailAddress"

        />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapperpassword"
        android:layout_below="@+id/wrapperemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <EditText
            android:id="@+id/edittext_password"
            android:hint="@string/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_email"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:inputType="textPassword"
            android:maxLines="1"
        />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrappercpassword"
        android:layout_below="@+id/wrapperpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <EditText
            android:id="@+id/edittext_cPassword"
            android:hint="@string/edittext_cPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_password"
            android:inputType="textPassword"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/button_register"
        android:textSize="20dp"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/wrappercpassword"
        android:background="@drawable/roundedbutton"


        />




</RelativeLayout>
